refactored inference API and end-to-end model pipeline integration.

--- a/notebooks/cxr-clip-report-generation.ipynb
+++ b/notebooks/cxr-clip-report-generation.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-05-26T20:21:01.204334Z",
-     "start_time": "2025-05-26T20:20:53.989202Z"
+     "end_time": "2025-05-27T16:48:34.741954Z",
+     "start_time": "2025-05-27T16:48:34.738724Z"
     }
    },
    "source": [
@@ -20,44 +20,24 @@
     "from cxrclip.downstream import CxrDecoderTrainer\n",
     "from data.loaders import CxrDataLoader"
    ],
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tudormihaita/PycharmProjects/clip-cxr-report-gen/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n",
-      "/Users/tudormihaita/PycharmProjects/clip-cxr-report-gen/.venv/lib/python3.9/site-packages/albumentations/__init__.py:28: UserWarning: A new version of Albumentations is available: '2.0.7' (you have '2.0.6'). Upgrade using: pip install -U albumentations. To disable automatic update checks, set the environment variable NO_ALBUMENTATIONS_UPDATE to 1.\n",
-      "  check_for_updates()\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     /Users/tudormihaita/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt_tab to\n",
-      "[nltk_data]     /Users/tudormihaita/nltk_data...\n",
-      "[nltk_data]   Package punkt_tab is already up-to-date!\n",
-      "[nltk_data] Downloading package omw-1.4 to\n",
-      "[nltk_data]     /Users/tudormihaita/nltk_data...\n",
-      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T20:21:04.760629Z",
-     "start_time": "2025-05-26T20:21:01.207163Z"
+     "end_time": "2025-05-27T13:52:04.941848Z",
+     "start_time": "2025-05-27T13:52:02.553827Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "tokenizer_config = yaml.load(open(\"../configs/tokenizer/conditional_llm.yaml\"), Loader=yaml.FullLoader)\n",
+    "tokenizer_config = yaml.load(open(\"../configs/tokenizer/cxr_bert.yaml\"), Loader=yaml.FullLoader)\n",
     "model_config = yaml.load(open(\"../configs/model/conditional_report_gen.yaml\"), Loader=yaml.FullLoader)\n",
     "loss_config = yaml.load(open(\"../configs/loss/language_modeling.yaml\"), Loader=yaml.FullLoader)\n",
     "\n",
     "tokenizer = load_tokenizer(**tokenizer_config)\n",
-    "model = build_model(model_config, loss_config, tokenizer, use_custom=True)\n",
+    "model = build_model(model_config, loss_config, tokenizer)\n",
     "loss_fn = build_loss(loss_config)"
    ],
    "id": "7340b593b2bd8f6e",
@@ -68,11 +48,11 @@
      "text": [
       "/Users/tudormihaita/PycharmProjects/clip-cxr-report-gen/.venv/lib/python3.9/site-packages/huggingface_hub/file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n",
-      "2025-05-26 23:21:01,236 - INFO - Loading pre-trained image encoder from checkpoint\n",
-      "Some weights of the model checkpoint at microsoft/swin-tiny-patch4-window7-224 were not used when initializing SwinModel: ['classifier.bias', 'classifier.weight']\n",
+      "2025-05-27 16:52:02,753 - INFO - Loading pre-trained image encoder from checkpoint\n",
+      "Some weights of the model checkpoint at microsoft/swin-tiny-patch4-window7-224 were not used when initializing SwinModel: ['classifier.weight', 'classifier.bias']\n",
       "- This IS expected if you are initializing SwinModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing SwinModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "2025-05-26 23:21:02,506 - INFO - Freezing image encoder to not be re-trained\n"
+      "2025-05-27 16:52:03,255 - INFO - Freezing image encoder to not be re-trained\n"
      ]
     }
    ],
@@ -81,8 +61,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T20:21:04.838875Z",
-     "start_time": "2025-05-26T20:21:04.834724Z"
+     "end_time": "2025-05-27T16:48:42.862330Z",
+     "start_time": "2025-05-27T16:48:42.855753Z"
     }
    },
    "cell_type": "code",
@@ -102,13 +82,13 @@
    ],
    "id": "3e0d5b0619a1a992",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-26T20:21:05.625240Z",
-     "start_time": "2025-05-26T20:21:04.846708Z"
+     "end_time": "2025-05-27T16:48:45.939515Z",
+     "start_time": "2025-05-27T16:48:44.743042Z"
     }
    },
    "cell_type": "code",
@@ -152,7 +132,28 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-27T16:50:57.175463Z",
+     "start_time": "2025-05-27T16:50:57.172727Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(len(dataloaders[\"val\"].dataset))",
+   "id": "a8104f090ec8f75",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37664\n"
+     ]
+    }
+   ],
+   "execution_count": 14
   },
   {
    "metadata": {
