improved structure. refactored code for better readability and easier API integration.

--- a/notebooks/base-clip-cxr-pretrain-demo.ipynb
+++ b/notebooks/base-clip-cxr-pretrain-demo.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-14T08:29:17.680197Z",
-     "start_time": "2025-04-14T08:29:17.677608Z"
+     "end_time": "2025-06-08T12:57:09.363353Z",
+     "start_time": "2025-06-08T12:57:06.968870Z"
     }
    },
    "source": [
@@ -24,43 +24,44 @@
     "from constants import CHEXPERT_LABELS\n",
     "from data.loaders import CxrDataLoader"
    ],
-   "outputs": [],
-   "execution_count": 2
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tudormihaita/PycharmProjects/clip-cxr-report-gen/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n",
+      "/Users/tudormihaita/PycharmProjects/clip-cxr-report-gen/.venv/lib/python3.9/site-packages/albumentations/__init__.py:28: UserWarning: A new version of Albumentations is available: '2.0.8' (you have '2.0.6'). Upgrade using: pip install -U albumentations. To disable automatic update checks, set the environment variable NO_ALBUMENTATIONS_UPDATE to 1.\n",
+      "  check_for_updates()\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T08:29:19.258584Z",
-     "start_time": "2025-04-14T08:29:19.255352Z"
+     "end_time": "2025-06-08T12:57:27.210076Z",
+     "start_time": "2025-06-08T12:57:27.207562Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "CHECKPOINT_PATH = \"./output\"\n",
-    "\n",
-    "args = argparse.Namespace(\n",
-    "    dataset_name='mimic-cxr',\n",
-    "    batch_size=64,\n",
-    "    num_workers=0,\n",
-    "    max_seq_length=248,\n",
-    "    use_minio=False\n",
-    ")"
-   ],
+   "source": "CHECKPOINT_PATH = \"./output/experiments\"",
    "id": "a6694cd81c6c5031",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-14T08:29:22.934692Z",
-     "start_time": "2025-04-14T08:29:20.541550Z"
+     "end_time": "2025-06-08T13:04:57.681904Z",
+     "start_time": "2025-06-08T13:04:54.293939Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# model_path = os.path.join(CHECKPOINT_PATH, \"best_128_5e-05_original_22000_0.855.pt\")\n",
-    "model_path = os.path.join(CHECKPOINT_PATH, \"clip_cxr_model.pt\")\n",
+    "model_path = os.path.join(CHECKPOINT_PATH, \"clip_cxr_model-multitask20.pt\")\n",
     "model, preprocess = clip.load(model_path, load_checkpoint=True)\n",
     "\n",
     "input_resolution = model.visual.input_resolution\n",
@@ -80,7 +81,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Warning] Unexpected keys in state_dict: ['positional_embedding_res']\n",
+      "[Warning] Missing keys in state_dict: ['medical_concept_classifier.0.weight', 'medical_concept_classifier.0.bias', 'medical_concept_classifier.2.weight', 'medical_concept_classifier.2.bias']\n",
+      "[Warning] Unexpected keys in state_dict: ['positional_embedding_res', 'medical_concept_classifier.model.0.weight', 'medical_concept_classifier.model.0.bias', 'medical_concept_classifier.model.3.weight', 'medical_concept_classifier.model.3.bias']\n",
       "Model parameters: 151,772,943\n",
       "Input resolution: 224\n",
       "Original context length: 248\n",
@@ -89,7 +91,112 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-08T13:07:40.916343Z",
+     "start_time": "2025-06-08T13:05:08.187672Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from eval.metrics.retrieval import compute_retrieval_recall_metrics\n",
+    "from data import load_tokenizer\n",
+    "import json\n",
+    "import yaml\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "tokenizer_config = yaml.load(open(\"../configs/tokenizer/clinical_bert.yaml\"), Loader=yaml.FullLoader)\n",
+    "tokenizer = load_tokenizer(**tokenizer_config)\n",
+    "\n",
+    "transform_config = yaml.load(open(\"../configs/transform/clahe.yaml\"), Loader=yaml.FullLoader)\n",
+    "args = argparse.Namespace(\n",
+    "    dataset_name='mimic-cxr-mvs',\n",
+    "    batch_size=4,\n",
+    "    max_length=248,\n",
+    "    image_size=224,\n",
+    "    num_workers=0,\n",
+    "    drop_last=True,\n",
+    "    use_minio=False\n",
+    ")\n",
+    "\n",
+    "dataloader = CxrDataLoader(\n",
+    "        args,\n",
+    "        split='test',\n",
+    "        transform_config=transform_config,\n",
+    "        tokenizer=tokenizer,\n",
+    ")\n",
+    "\n",
+    "all_texts = []\n",
+    "all_labels = []\n",
+    "all_text_embeddings = []\n",
+    "all_image_embeddings = []\n",
+    "\n",
+    "model.eval()\n",
+    "model = model.to(device)\n",
+    "\n",
+    "for batch in tqdm(dataloader, desc=\"Extracting embeddings\"):\n",
+    "    images = batch['images'].to(device)\n",
+    "    texts = batch['texts']\n",
+    "    labels = batch['labels']\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        image_features, _ = model.encode_image(images)\n",
+    "        image_features = image_features / (image_features.norm(dim=-1, keepdim=True) + 1e-8)\n",
+    "        img_feat = image_features.detach().cpu().numpy()\n",
+    "\n",
+    "        text_tokens = tokenizer(texts, padding='max_length', truncation=True,\n",
+    "                                max_length=args.max_length, return_tensors=\"pt\").to(device)\n",
+    "        text_features = model.encode_text(text_tokens.input_ids)\n",
+    "        text_features = text_features / (text_features.norm(dim=-1, keepdim=True) + 1e-8)\n",
+    "        text_feat = text_features.detach().cpu().numpy()\n",
+    "\n",
+    "    all_texts.extend(texts)\n",
+    "    all_text_embeddings.append(text_feat)\n",
+    "    all_image_embeddings.append(img_feat)\n",
+    "    all_labels.extend(labels.detach().cpu().numpy())\n",
+    "\n",
+    "all_image_embeddings = np.concatenate(all_image_embeddings)\n",
+    "all_text_embeddings = np.concatenate(all_text_embeddings)\n",
+    "all_labels = np.array(all_labels)\n",
+    "\n",
+    "results = compute_retrieval_recall_metrics(all_image_embeddings, all_text_embeddings, all_texts)\n",
+    "eval_metrics = {k: v.item() if isinstance(v, torch.Tensor) else v for k, v in results.items()}\n",
+    "print(f\"Evaluation metrics: {json.dumps(eval_metrics, indent=2)}\")"
+   ],
+   "id": "1cf6e675e0235e15",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tudormihaita/PycharmProjects/clip-cxr-report-gen/.venv/lib/python3.9/site-packages/huggingface_hub/file_download.py:797: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     /Users/tudormihaita/nltk_data...\n",
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n",
+      "Extracting embeddings: 100%|██████████| 725/725 [02:32<00:00,  4.76it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation metrics: {\n",
+      "  \"r_mean\": 819.178275862069,\n",
+      "  \"recall@1\": 0.06896551724137931,\n",
+      "  \"recall@5\": 0.20689655172413793,\n",
+      "  \"recall@10\": 0.6896551724137931\n",
+      "}\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {
@@ -145,9 +252,6 @@
    "cell_type": "code",
    "source": [
     "def select_random_sample_from_loader(loader):\n",
-    "    \"\"\"\n",
-    "    Selects a single sample from the DataLoader while preserving preprocessing logic.\n",
-    "    \"\"\"\n",
     "    for batch in loader:\n",
     "        batch_size = batch['image'].size(0)\n",
     "        idx = random.randint(0, batch_size - 1)\n",
@@ -414,30 +518,24 @@
    },
    "cell_type": "code",
    "source": [
-    "# List of 14 CheXpert classes as prompts\n",
     "prompts = [f\"A chest X-ray showing {label}\" for label in CHEXPERT_LABELS]\n",
     "print(\", \".join(f\"{label}: {value}\" for label, value in zip(CHEXPERT_LABELS, labels)))\n",
     "\n",
-    "# Tokenize all prompts at once\n",
     "text_tokens = clip.tokenize(prompts)\n",
     "text_features = model.encode_text(text_tokens)\n",
     "text_features = text_features / text_features.norm(dim=-1, keepdim=True)\n",
     "\n",
-    "# Compute image features\n",
     "image_tensor = entry[\"image\"].unsqueeze(0)\n",
     "image_features, _ = model.encode_image(image_tensor)\n",
     "image_features = image_features / image_features.norm(dim=-1, keepdim=True)\n",
     "\n",
-    "# Similarity + scaling + softmax\n",
     "logit_scale = model.logit_scale.exp().clamp(max=100)\n",
     "logits = logit_scale * image_features @ text_features.T\n",
     "probs = torch.softmax(logits, dim=-1).detach().cpu().numpy().flatten()\n",
     "\n",
-    "# Show top-1 prediction\n",
     "top_index = probs.argmax()\n",
     "print(f\"Top prediction: {CHEXPERT_LABELS[top_index]} (prob: {probs[top_index]:.4f})\")\n",
     "\n",
-    "# Show all probabilities\n",
     "for label, prob in zip(CHEXPERT_LABELS, probs):\n",
     "    print(f\"{label}: {prob:.4f}\")"
    ],
@@ -477,17 +575,11 @@
    },
    "cell_type": "code",
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from torchvision.transforms import ToPILImage\n",
+    "\n",
     "def select_non_matching_sample_by_labels(loader, query_labels):\n",
-    "    \"\"\"\n",
-    "    Iterates over the loader to find a sample whose label tensor differs from the query sample's labels.\n",
     "\n",
-    "    Args:\n",
-    "        loader: A data loader that yields batches containing the key \"labels\".\n",
-    "        query_labels (torch.Tensor): The label tensor for the query sample.\n",
-    "\n",
-    "    Returns:\n",
-    "        A sample dictionary from the loader that has different labels than the query, or None if not found.\n",
-    "    \"\"\"\n",
     "    for batch in loader:\n",
     "        batch_size = len(batch[\"uid\"])\n",
     "        for i in range(batch_size):\n",
@@ -496,7 +588,7 @@
     "                return { key: batch[key][i] for key in batch }\n",
     "    return None\n",
     "\n",
-    "# Usage:\n",
+    "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "test_loader_iter = iter(test_loader)\n",
     "query_entry = next(test_loader_iter)\n",
@@ -517,7 +609,6 @@
     "    print(\"Candidate report:\", candidate_report)\n",
     "    print(\"Candidate labels:\", candidate_labels)\n",
     "\n",
-    "    # Encode query image and text\n",
     "    proj_query, _ = model.encode_image(query_image_tensor)\n",
     "    text_query = model.encode_text(clip.tokenize(query_report, extended_context=True).to(device)).float()\n",
     "\n",
@@ -526,10 +617,8 @@
     "\n",
     "    logit_scale = model.logit_scale.exp().clamp(max=100)\n",
     "\n",
-    "    # Matching pair similarity (query image with its own text)\n",
     "    sim_matching = (logit_scale * (text_query @ proj_query.T)).detach().cpu().numpy()\n",
     "\n",
-    "    # Encode candidate image (non-matching)\n",
     "    proj_candidate, _ = model.encode_image(candidate_image_tensor)\n",
     "    proj_candidate /= proj_candidate.norm(dim=-1, keepdim=True)\n",
     "\n",
@@ -538,9 +627,6 @@
     "    print(\"Matching pair similarity:\", sim_matching)\n",
     "    print(\"Non-matching pair similarity:\", sim_nonmatching)\n",
     "\n",
-    "    # Optionally visualize the images\n",
-    "    from torchvision.transforms import ToPILImage\n",
-    "    import matplotlib.pyplot as plt\n",
     "\n",
     "    query_img = ToPILImage()(query_entry[\"image\"][0])\n",
     "    candidate_img = ToPILImage()(non_matching_entry[\"image\"])\n",
