--- a/notebooks/blip-cxr-pre-training.ipynb
+++ b/notebooks/blip-cxr-pre-training.ipynb
@@ -1,26 +1,6 @@
 {
  "cells": [
   {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "# only required for cluster training in order to detect python packages from the project root\n",
-    "# import os\n",
-    "# import sys\n",
-    "#\n",
-    "# project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))  # add to sys path the project root to be able to use in-repo packages\n",
-    "# if project_root not in sys.path:\n",
-    "#     sys.path.insert(0, project_root)\n",
-    "#\n",
-    "# print(sys.executable)\n",
-    "# for p in sys.path:\n",
-    "#     print(p)"
-   ],
-   "id": "c979dc875ba771c6"
-  },
-  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-26T17:28:14.411578Z",
@@ -50,7 +30,7 @@
    },
    "cell_type": "code",
    "source": [
-    "config_path = '../configs/pretrain.yaml'\n",
+    "config_path = '../configs/baselines/pretrain.yaml'\n",
     "config = yaml.load(open(config_path), Loader=yaml.Loader)"
    ],
    "id": "528fbb3ff0060210",
