--- a/notebooks/blip-pretrain-demo.ipynb
+++ b/notebooks/blip-pretrain-demo.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-29T09:48:29.543266Z",
-     "start_time": "2025-04-29T09:48:27.525990Z"
+     "end_time": "2025-06-08T13:17:20.965618Z",
+     "start_time": "2025-06-08T13:17:18.109796Z"
     }
    },
    "source": [
@@ -29,26 +29,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-29T09:48:30.174686Z",
-     "start_time": "2025-04-29T09:48:30.168295Z"
+     "end_time": "2025-06-08T13:17:21.991074Z",
+     "start_time": "2025-06-08T13:17:21.985114Z"
     }
    },
    "cell_type": "code",
    "source": [
     "CHECKPOINT_PATH = './output/pretrain'\n",
-    "# MODEL_PATH = os.path.join(CHECKPOINT_PATH, 'checkpoint-14000.pt')\n",
-    "MODEL_PATH = os.path.join(CHECKPOINT_PATH, 'blip_cxr_pretrain_test_split_best_retrieval.pt')\n",
+    "# MODEL_PATH = os.path.join(CHECKPOINT_PATH, 'blip_cxr_pretrain_checkpoint-14000-best.pt')\n",
+    "MODEL_PATH = os.path.join(CHECKPOINT_PATH, 'blip_cxr_pretrain_best_retrieval2.pt')\n",
     "\n",
     "config_path = '../configs/baselines/pretrain.yaml'\n",
-    "pretrain_config = yaml.load(open(config_path), Loader=yaml.Loader)\n",
-    "\n",
-    "args = argparse.Namespace(\n",
-    "    dataset_name='mimic-cxr',\n",
-    "    batch_size=10,\n",
-    "    num_workers=0,\n",
-    "    drop_last=True,\n",
-    "    use_minio=False\n",
-    ")"
+    "pretrain_config = yaml.load(open(config_path), Loader=yaml.Loader)"
    ],
    "id": "56a8ec773da3b0a8",
    "outputs": [],
@@ -57,8 +49,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-29T09:33:00.459267Z",
-     "start_time": "2025-04-29T09:32:59.421409Z"
+     "end_time": "2025-06-08T13:17:23.665738Z",
+     "start_time": "2025-06-08T13:17:22.572921Z"
     }
    },
    "cell_type": "code",
@@ -82,8 +74,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-29T09:33:02.403014Z",
-     "start_time": "2025-04-29T09:33:02.399950Z"
+     "end_time": "2025-06-08T13:17:24.793577Z",
+     "start_time": "2025-06-08T13:17:24.791805Z"
     }
    },
    "cell_type": "code",
@@ -98,9 +90,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55.16203703703704\n",
-      "5.440605205959744\n",
-      "2430\n"
+      "5.688657407407407\n",
+      "9.809754011366103\n",
+      "5885\n"
      ]
     }
    ],
@@ -109,8 +101,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-29T09:48:51.528658Z",
-     "start_time": "2025-04-29T09:48:36.363662Z"
+     "end_time": "2025-06-08T13:17:37.692403Z",
+     "start_time": "2025-06-08T13:17:25.940224Z"
     }
    },
    "cell_type": "code",
@@ -128,34 +120,6 @@
    ],
    "id": "97e435c199a4d973",
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/439M [00:00<?, ?B/s]"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "e5e53c8929e5485a922f541f2938a86a"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/439M [00:00<?, ?B/s]"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "987a39a6e62a4895bd0d916161946a2d"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -259,11 +223,120 @@
       "/encoder/layer/11/intermediate/dense is tied\n",
       "/encoder/layer/11/output/dense is tied\n",
       "/encoder/layer/11/output/LayerNorm is tied\n",
-      "Loaded checkpoint from ./output/pretrain/blip_cxr_pretrain_test_split_best_retrieval.pt\n"
+      "Loaded checkpoint from ./output/pretrain/blip_cxr_pretrain_best_retrieval2.pt\n",
+      "Missing keys: ['text_decoder.cls.predictions.bias']\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 5
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-08T13:21:55.762866Z",
+     "start_time": "2025-06-08T13:17:45.153805Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from eval.metrics.retrieval import compute_retrieval_recall_metrics\n",
+    "from data import load_tokenizer\n",
+    "import json\n",
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "tokenizer_config = yaml.load(open(\"../configs/tokenizer/clinical_bert.yaml\"), Loader=yaml.FullLoader)\n",
+    "tokenizer = load_tokenizer(**tokenizer_config)\n",
+    "\n",
+    "transform_config = yaml.load(open(\"../configs/transform/clahe.yaml\"), Loader=yaml.FullLoader)\n",
+    "args = argparse.Namespace(\n",
+    "    dataset_name='mimic-cxr-mvs',\n",
+    "    batch_size=4,\n",
+    "    max_length=143,\n",
+    "    image_size=224,\n",
+    "    num_workers=0,\n",
+    "    drop_last=True,\n",
+    "    use_minio=False\n",
+    ")\n",
+    "\n",
+    "dataloader = CxrDataLoader(\n",
+    "        args,\n",
+    "        split='test',\n",
+    "        transform_config=transform_config,\n",
+    "        tokenizer=tokenizer,\n",
+    ")\n",
+    "\n",
+    "all_texts = []\n",
+    "all_labels = []\n",
+    "all_text_embeddings = []\n",
+    "all_image_embeddings = []\n",
+    "\n",
+    "model.eval()\n",
+    "model = model.to(device)\n",
+    "\n",
+    "for batch in tqdm(dataloader, desc=\"Extracting embeddings\"):\n",
+    "    images = batch['images'].to(device)\n",
+    "    texts = batch['texts']\n",
+    "    labels = batch['labels']\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        # Image embeddings using BLIP\n",
+    "        image_embeds = model.visual_encoder(images)\n",
+    "        img_feat = model.vision_proj(image_embeds[:, 0, :])\n",
+    "        img_feat = img_feat / img_feat.norm(dim=-1, keepdim=True)\n",
+    "        img_feat = img_feat.detach().cpu().numpy()\n",
+    "\n",
+    "        # Text embeddings using BLIP\n",
+    "        text_inputs = model.tokenizer(texts, padding='max_length', truncation=True,\n",
+    "                                      max_length=args.max_length, return_tensors=\"pt\").to(device)\n",
+    "        text_output = model.text_encoder(text_inputs.input_ids,\n",
+    "                                         attention_mask=text_inputs.attention_mask,\n",
+    "                                         return_dict=True, mode='text')\n",
+    "        text_feat = model.text_proj(text_output.last_hidden_state[:, 0, :])\n",
+    "        text_feat = text_feat / text_feat.norm(dim=-1, keepdim=True)\n",
+    "        text_feat = text_feat.detach().cpu().numpy()\n",
+    "\n",
+    "    all_texts.extend(texts)\n",
+    "    all_text_embeddings.append(text_feat)\n",
+    "    all_image_embeddings.append(img_feat)\n",
+    "    all_labels.extend(labels.detach().cpu().numpy())\n",
+    "\n",
+    "all_image_embeddings = np.concatenate(all_image_embeddings)\n",
+    "all_text_embeddings = np.concatenate(all_text_embeddings)\n",
+    "all_labels = np.array(all_labels)\n",
+    "\n",
+    "results = compute_retrieval_recall_metrics(all_image_embeddings, all_text_embeddings, all_texts)\n",
+    "eval_metrics = {k: v.item() if isinstance(v, torch.Tensor) else v for k, v in results.items()}\n",
+    "print(f\"Evaluation metrics: {json.dumps(eval_metrics, indent=2)}\")"
+   ],
+   "id": "c93db03b510958d9",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     /Users/tudormihaita/nltk_data...\n",
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n",
+      "Extracting embeddings: 100%|██████████| 725/725 [04:10<00:00,  2.90it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evaluation metrics: {\n",
+      "  \"r_mean\": 803.9179310344828,\n",
+      "  \"recall@1\": 0.1724137931034483,\n",
+      "  \"recall@5\": 0.3103448275862069,\n",
+      "  \"recall@10\": 0.9310344827586206\n",
+      "}\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {
