--- a/notebooks/blip-report-generation.ipynb
+++ b/notebooks/blip-report-generation.ipynb
@@ -33,7 +33,7 @@
    },
    "cell_type": "code",
    "source": [
-    "config_path = '../configs/generation.yaml'\n",
+    "config_path = '../configs/baselines/generation.yaml'\n",
     "config = yaml.load(open(config_path), Loader=yaml.Loader)"
    ],
    "id": "44c1f2d12e531744",
