--- a/notebooks/cxr-clip-classification-finetune.ipynb
+++ b/notebooks/cxr-clip-classification-finetune.ipynb
@@ -15,10 +15,10 @@
     "import torch\n",
     "import yaml\n",
     "\n",
-    "from cxrclip import build_model\n",
-    "from cxrclip.loss import build_loss\n",
+    "from clipxrgen import build_model\n",
+    "from clipxrgen.loss import build_loss\n",
     "from data import load_tokenizer\n",
-    "from cxrclip.finetune import CxrClassifierTrainer\n",
+    "from clipxrgen.finetune import ChexpertClassifierTrainer\n",
     "from data.loaders import CxrDataLoader"
    ],
    "outputs": [
@@ -180,7 +180,7 @@
    },
    "cell_type": "code",
    "source": [
-    "trainer = CxrClassifierTrainer(\n",
+    "trainer = ChexpertClassifierTrainer(\n",
     "    model=model,\n",
     "    config=train_config,\n",
     "    loss_fn=loss_fn,\n",
