--- a/notebooks/cxr-clip-pre-training.ipynb
+++ b/notebooks/cxr-clip-pre-training.ipynb
@@ -17,10 +17,10 @@
     "import numpy as np\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
-    "from cxrclip import build_model\n",
-    "from cxrclip.loss import build_loss\n",
+    "from clipxrgen import build_model\n",
+    "from clipxrgen.loss import build_loss\n",
     "from data import load_tokenizer\n",
-    "from cxrclip.pretrain import CxrCLIPTrainer\n",
+    "from clipxrgen.pretrain import ImageTextAlignmentTrainer\n",
     "from data.loaders import CxrDataLoader\n",
     "from constants import CHEXPERT_LABELS"
    ],
@@ -206,7 +206,7 @@
    },
    "cell_type": "code",
    "source": [
-    "trainer = CxrCLIPTrainer(\n",
+    "trainer = ImageTextAlignmentTrainer(\n",
     "    model=model,\n",
     "    config=train_config,\n",
     "    loss_fn=loss_fn,\n",
