--- a/notebooks/cxr-clip-report-generation.ipynb
+++ b/notebooks/cxr-clip-report-generation.ipynb
@@ -14,10 +14,10 @@
     "import argparse\n",
     "import yaml\n",
     "\n",
-    "from cxrclip import build_model\n",
-    "from cxrclip.loss import build_loss\n",
+    "from clipxrgen import build_model\n",
+    "from clipxrgen.loss import build_loss\n",
     "from data import load_tokenizer\n",
-    "from cxrclip.downstream import CxrDecoderTrainer\n",
+    "from clipxrgen.downstream import RadiologyReportDecoderTrainer\n",
     "from data.loaders import CxrDataLoader"
    ],
    "outputs": [],
@@ -164,7 +164,7 @@
    },
    "cell_type": "code",
    "source": [
-    "trainer = CxrDecoderTrainer(\n",
+    "trainer = RadiologyReportDecoderTrainer(\n",
     "    model=model,\n",
     "    config=train_config,\n",
     "    loss_fn=loss_fn,\n",
